[package]
name = "dungeoncrawl"
version = "0.1.0"
authors = ["Matt Stine <matt.stine@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = { git = "https://github.com/thebracket/bracket-lib" } 
legion = "=0.3.1"

